# bittravels-hackathon

./: .neon  README.md
backend/: .env.example  checkBalance.js  check_db.js  db_output.txt  fares-utf8.json  flight-data-utf8.json  flight-data.json  getAsset.js  package-lock.json  package.json  rename_db.js  test-amadeus.ts  test-fares.json
backend/src/: db.ts  server.ts
backend/src/data/: airports-local.ts
backend/src/middleware/: auth.ts
backend/src/routes/: bookings.ts  flights.ts  funding.ts  locations.ts  reservation_webhook.ts
backend/src/scripts/: migrate_bookings.ts  test-branded.ts
backend/src/services/: amadeus.ts  reservationNotifier.ts  reservationRepository.ts  reservationSanitizer.ts  soroban.ts  (+1 more)
docs/: backend.md  escrow.md  frontend.md
frontend/: .env.example  deploy.js  deploy_from_wasm.js  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  ts_output.txt
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CityAutocomplete.tsx  ComparisonTable.tsx  ContactForm.tsx  FAQ.tsx  FlightSearch.tsx  FloatingWhatsApp.tsx  Footer.tsx  Header.tsx  Hero.tsx  PassengerForm.tsx  PassengerSelector.tsx  PaymentForm.tsx  PrivyLogin.tsx  PrivyProviders.tsx  Services.tsx  Testimonials.tsx  ValueProposition.tsx  WalletDebugBanner.tsx
frontend/config/: constants.ts
frontend/contexts/: FlightContext.tsx  LanguageContext.tsx
frontend/hooks/: useEscrow.ts  useLocalStellarWallet.ts
frontend/utils/: detectUserLanguage.ts
soroban-escrow/: Cargo.toml  README.md  deploy.js
soroban-escrow/src/: lib.rs
(+6 files in other folders)
